--- a/PBL/src/main/resources/application.properties
+++ b/PBL/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.initialization-mode=always
+spring.datasource.data=classpath:data.sql
 
 server.error.include-stacktrace=never
