--- a/PBL/src/main/resources/application.properties
+++ b/PBL/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=PBL
 
 # ALTERAR O NOME DO BANCO DE DADOS
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=TESTE;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=PBL_EC3;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
