--- a/PBL/src/main/resources/application.properties
+++ b/PBL/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 spring.application.name=PBL
-
-# ALTERAR O NOME DO BANCO DE DADOS
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=PBL_EC3;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=123456
@@ -9,6 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:data.sql
 
+
+# Configuração para stack trace de erros
 server.error.include-stacktrace=never
